--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">CarRentPro</string>
+    <string name="app_name" translatable="false">CarRentPro</string>
+    <string name="creators" translatable="false">Created by: G &amp; K</string>
 </resources>
